--- a/DjangoAuth/authen/templates/authen/signup.html
+++ b/DjangoAuth/authen/templates/authen/signup.html
@@ -3,4 +3,7 @@
  
 {% block content %}
     <h1>Signup</h1>
+    <form action="/accounts/signup/" method="post">
+        {{ form }}
+    </form>
 {% endblock content %}
