--- a/DjangoAuth/authen/templates/authen/signup.html
+++ b/DjangoAuth/authen/templates/authen/signup.html
@@ -1,9 +1,11 @@
-{% extends "./layout/base.html" %}
+{% extends "./layout/base1.html" %}
 {% load static %}
  
 {% block content %}
     <h1>Signup</h1>
-    <form action="/accounts/signup/" method="post">
+    <form action="/authen/signup/" method="post">
+        {% csrf_token %}
         {{ form }}
+        <input type="submit" value="Signup">
     </form>
 {% endblock content %}
