--- a/DjangoAuth/authen/templates/authen/signup.html
+++ b/DjangoAuth/authen/templates/authen/signup.html
@@ -1,9 +1,9 @@
-{% extends "./layout/base1.html" %}
+{% extends "./layout/base.html" %}
 {% load static %}
  
 {% block content %}
     <h1>Signup</h1>
-    <form action="/authen/signup/" method="post">
+    <form action="/signup/" method="post">
         {% csrf_token %}
         {{ form }}
         <input type="submit" value="Signup">
