added delete user functionality

--- a/DjangoAuth/authen/templates/authen/dashboard.html
+++ b/DjangoAuth/authen/templates/authen/dashboard.html
@@ -3,5 +3,14 @@
  
 {% block content %}
     <h1>Dashboard</h1>
-    {{ all_users }}
+    <b>Select a user to delete : </b>
+    <form action="{% url 'authen:dropdown' %}" method="post">
+        {% csrf_token %}
+        <select name="item_id">
+        {% for entry in all_users %}
+            <option value="{{ entry }}">{{ entry }}</option>
+        {% endfor %}
+        </select>
+        <input type="submit" value="Delete User">
+    </form>
 {% endblock content %}
